[package]
name = "fvm_actor_example"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"
base64 = "0.13.1"

fvm_sdk = { version = "3.0.0-alpha.8", path = "../ref-fvm/sdk" }
fvm_shared = { version = "3.0.0-alpha.8", path = "../ref-fvm/shared" }
fvm_ipld_encoding = { version = "0.3.0", path = "../ref-fvm/ipld/encoding" }
fvm_ipld_blockstore = { version = "0.1.1", path = "../ref-fvm/ipld/blockstore" }
fvm_ipld_hamt = { version = "0.6.0", path = "../ref-fvm/ipld/hamt" }
# fil-actors-runtime = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = ["m2-native"] }

[dev-dependencies]
fvm_sdk = { version = "3.0.0-alpha.8", path = "../ref-fvm/sdk" }
fvm_ipld_hamt = { version = "0.6.0", path = "../ref-fvm/ipld/hamt" }

libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"

[build-dependencies]
substrate-wasm-builder = "4.0.0"