[package]
name = "fvm_actor_example"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"
base64 = "0.13.1"

fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }

[dev-dependencies]
fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }

libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"

[build-dependencies]
substrate-wasm-builder = "4.0.0"
