[package]
name = "rust"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm.git" }
base64 = "0.13.1"
cid = { version = "0.8.4", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm.git" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm.git" }
num-bigint = "0.4"
libp2p = "0.49.0"
